# zdoc

./: README.md  pyproject.toml
src/zdoc/: fake_zip.py
