[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zdoc"
version = "0.3.1"
authors = [
  { name="inspirare6", email="inspirare6@163.com" },
]
description = "document generating tools"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "jinja2",
  "lxml",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/inspirare6/zdoc"
"Bug Tracker" = "https://github.com/inspirare6/zdoc/issues"